[gd_scene load_steps=5 format=3 uid="uid://ck2ulq6fu1fu8"]

[ext_resource type="Script" uid="uid://cu0a2w3pn1p43" path="res://scenes/misc/planet.gd" id="1_5x7lb"]
[ext_resource type="Texture2D" uid="uid://05lyy3e10w87" path="res://assets/textures/planets/yourmother.png" id="2_2yvdc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_210hj"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5x7lb"]
radius = 47.3814

[node name="planet" type="Node2D"]
script = ExtResource("1_5x7lb")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_2yvdc")

[node name="collision_planet" type="Area2D" parent="."]

[node name="collision_planet_shape" type="CollisionShape2D" parent="collision_planet"]
shape = SubResource("CircleShape2D_210hj")

[node name="gravity_range" type="Area2D" parent="."]

[node name="gravity_range_shape" type="CollisionShape2D" parent="gravity_range"]
shape = SubResource("CircleShape2D_5x7lb")

[connection signal="area_entered" from="gravity_range" to="." method="_on_gravity_range_area_entered"]
